package bt_java.creational.singleton.vote;

public enum Candidate {
    TRUMP, BIDEN
}
